[package]
name = "cotl-save-editor"
version = "0.1.0"
authors = ["xhayper <hayper1919@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
aes = "0.8.1"
cbc = "0.1.2"
js-sys = "0.3.60"
bytes = "1.2.1"
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"] }
cfg-if = "1.0.0"

[profile.release]
opt-level = "s"
